--- a/index.html
+++ b/index.html
@@ -1,29 +1,17 @@
-<!DOCTYPE html>
-<html
-
+<!doctype html>
+<html>
 <head>
-
-		<meta charset="utf-8">
-		<meta name="viewport" contents="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Jackson Spilsbury's Website">
-		<meta name="author" content="Jackson Spilsbury">
-		<title>Jackson Spilsbury's Site</title>
-		<link rel="stylesheet" href="css/bootstrap.css">
-		<link rel="stylesheet" href="css/style.css">
+<meta charset="UTF-8">
+<title>Jackson Spilsbury - Director</title>
+<link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-
-		<div id="ComingSoonText" class="text-center">
-		</div>
-
-		<img src="img/comingsoon.png" class="centeredImage"/>
-
-
-</style>
-
-
+<div>
+	<img class="centeredImage" src="img/comingsoon.png" width="360" height="50" alt=""/>
 
 </body>
+</html>
+
 
 </html>
