--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Jackson Spilsbury - Director</title>
+<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
 <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
